--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -120,6 +120,12 @@
   tag = abbr
 }
 
+\DeclareAcronym{k}{
+  short = \tsc{k} ,
+  long  = case feature ,
+  tag = abbr
+}
+
 \DeclareAcronym{sg}{
   short = \tsc{sg} ,
   long  = singular ,
