--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -29,7 +29,7 @@
 @phdthesis{himmelreich2017,
   location = {Leipzig},
   title = {Case Matching Effects in Free Relatives and Parasitic Gaps: {{A}} Study on the Properties of Agree},
-  location = {Universität Leipzig},
+  school = {Universität Leipzig},
   author = {Himmelreich, Anke},
   year = {2017}
 }
@@ -818,7 +818,7 @@
 @article{caha2021,
   title={Modeling declensions without declension features. The case of Russian},
   author={Caha, Pavel},
-  year={2020},
+  year={2021},
   doi={10.1556/2062.2021.00433},
   journal={Acta Linguistica Academica}
 }
@@ -1006,4 +1006,12 @@
   author = {Sag, Ivan A},
   year = {2003},
   pages = {267--291}
+}
+
+@phdthesis{caponigro2003,
+  title={Free not to ask: On the semantics of free relatives and wh-words cross-linguistically},
+  author={Caponigro, Ivano},
+  year={2003},
+  location={Los Angeles},
+  school={University of California}
 }
