--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -18,7 +18,7 @@ This can be reformulated as follows. In a competition, accusative wins over nomi
 In Section \ref{sec:pattern-rels} I give examples that illustrate that case competition in Gothic headless relative adhere to the case scale.
 
 In the remainder of the chapter I show that the case scale is also adhered to beyond headless relatives. It also leading in case competition in numeral phrases \citep{caha2019}, which I do not discuss in this dissertation.
-Besides in constructions that involve case competition, the case scale appears in other syntactic and in morphological phenomena. Section \ref{sec:impl-hier} discusses two implicational hierarchies that show the same case ordering. The hierarchies concern agreement and relativization in different languages. Section \ref{sec:case-morphology} shows that the case scale also appears in morphology. It can be observed in patterns of syncretism and in morphological containment.
+Besides in constructions that involve case competition, the case scale also appears in morphology. Section \ref{sec:case-morphology} shows that the case scale also appears in morphology. It can be observed in patterns of syncretism and in morphological containment.
 
 
 \section{In headless relatives}\label{sec:pattern-rels}
@@ -292,10 +292,96 @@ This topic is the main focus of Part \ref{part:variation} of this dissertation.}
 In the remainder of this chapter I show that headless relatives are not the only phenomenon where the case scale appears. Instead, it appears with more syntactic phenomena, and it is also reflected in morphology.
 
 
-\section{In syntax}\label{sec:impl-hier}
+\section{In morphology}\label{sec:case-morphology}
 
-In this section I discuss two additional syntactic phenomena that reflect the \ac{nom} < \ac{acc} < \ac{dat} scale. The first one is an implicational hierarchy that concerns agreement. The second one is an implicational hierarchy about relativization.
+In this chapter so far I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed case competition in headless relatives.
+In this section, I show that this same case scale can be observed in morphology. First I show that syncretism only targets continuous regions on the case scale. Then I present a language that shows morphological containment that reflects the case scale.
 
+
+\section{Syncretism}
+
+Syncretism refers to the phenomenon whereby two or more different functions are fulfilled by a single form \citep[cf.][]{baerman2002}. In this section I discuss literature that shows that syncretism patterns among nominative, accusative and dative are not random. Instead, they pattern along the case scale \ac{nom} < \ac{acc} < \ac{dat}.
+
+It has widely been observed that syncretism is restricted by the linear sequence \ac{nom} --- \ac{acc} --- \ac{dat} \citep{baerman2005,caha2009,zompi2017} (and see \citealt{mcfadden2018,smith2019} for similar claims concerning root suppletion). That is, if one orders cases in this linear sequence, only contiguous regions in the sequence turn out to be syncretic.
+Following that, four possible patterns are attested crosslinguistically. First, all three cases are syncretic. Second, nominative and accusative are syncretic and the dative is not. Third, the accusative and the dative are syncretic and the nominative is not. Fourth, all cases are non-syncretic.
+
+There is one pattern that is not attested crosslinguistically. This pattern does not target continuous regions, but non-contiguous ones: nominative and dative are syncretic and accusative is not. In other words, what does not exist is an ABA pattern, in which a form B intervenes between the two identically formed As \citep{bobaljik2012}.
+
+Table \ref{tbl:syncretisms} shows examples for each of these possible patterns.
+
+\begin{table}[ht]
+  \center
+  \caption {Syncretism patterns in Germanic pronouns}
+    \input{tables/syncretism-nom-acc-dat.tex}
+  \label{tbl:syncretisms}
+\end{table}
+
+Faroese has an example of three distinct forms. The second person singular is \tit{tú} `you' for nominative, \tit{teg} `you' for accusative and \tit{tær} `you' for dative \pgcitep{lockwood1977}{70}.
+Dutch has an example of a complete syncretism for nominative, accusative and dative. The second person plural pronoun is \tit{jullie} `you.\ac{pl}' is syncretic between all three cases.
+Icelandic has an example of a syncretism between accusative and dative but not nominative. The first person singular plural is \tit{okkur} `us' is syncretic between accusative and dative. The nominative has a separate form: \tit{við} `we' \pgcitep{einarsson1949}{68}.
+German has an example of a syncretism between nominative and accusative but not dative. The third person singular feminine \tit{sie} `she/her' is syncretic between nominative and accusative. The dative has a separate form: \tit{ihr} `her'.
+Crucially, to the best of my knowledge, there is no language in which the nominative and the dative are syncretic but the accusative is not.
+
+In sum, case syncretism follows the ordering of the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
+
+
+\section{Morphological case containment}
+
+This section shows a second way in which \ac{nom} < \ac{acc} < \ac{dat} is reflected in morphology: morphological case containment \citep[cf.][]{smith2019,zompi2017,caha2010}. In some languages, the form that is used for the accusative literally contains the form that is used for the nominative. In turn, the form for the dative contains the form for the accusative. I illustrate this phenomenon with examples from Khanty.
+
+Khanty (or Ostyak) shows morphological case containment in some of its pronouns (\pgcitealt{nikolaeva1999}{16} after \citealt{smith2019}). Three examples are given in Table \ref{tbl:cont-khanty}.
+
+\begin{table}[ht]
+  \center
+  \caption {Morphological case containment in Khanty}
+  \begin{tabular}{clll}
+  \toprule
+            & \ac{1}\ac{sg}
+            & \ac{3}\ac{sg}
+            & \ac{1}\ac{pl}                           \\
+            \cmidrule(lr){2-2} \cmidrule(lr){3-3} \cmidrule(lr){4-4}
+  \ac{nom}  & ma
+            & luw
+            & muŋ                                     \\
+  \ac{acc}  & ma:\tbf{-ne:m}
+            & luw\tbf{-e:l}
+            & muŋ\tbf{-e:w}                           \\
+  \ac{dat}  & ma:\tbf{-ne:m}\tbf{\tbf{-na}}
+            & luw\tbf{-e:l}\tbf{\tbf{-na}}
+            & muŋ\tbf{-e:w}\tbf{\tbf{-na}}       \\
+  \bottomrule
+  \end{tabular}
+  \label{tbl:cont-khanty}
+\end{table}
+
+The nominative form for the first person singular is \tit{ma} `I'. The form for the accusative is \tit{ma:ne:m} `me'. This is the form for the nominative \tit{ma} plus the accusative marker \tit{-ne:m}. The form for the dative is \tit{ma:ne:mna} `me'. This is the form for the accusative \tit{ma:ne:m} plus the dative marker \tit{-na}. The dative formally contains the accusative, and the accusative formally contains the nominative.
+
+The third person singular and first person plural show the same pattern. The accusative forms \tit{luwe:l} `him/her' and \tit{muŋe:w} `us' contain the nominative forms \tit{luw} and the \tit{muŋ} plus the accusative marker \tit{-e:l} or \tit{-e:w}. The dative forms \tit{luwe:lna} `him/her' and \tit{muŋe:wna} `us' contain the accusative forms \tit{luwe:l} and \tit{muŋe:w} plus the dative marker \tit{-na}. Again, the dative formally contains the accusative, which in turn contains the nominative.
+
+Other languages that show this phenomenon are West Tocharian \citep{gippert1987} and Vlakh and Kalderaš Romani (respectively \citealt{friedman1991} and \citealt{boretzky1994}).
+
+In sum, some languages morphologically look like \ac{nom}-\ac{acc}-\ac{dat}. This reflects the case scale \ac{nom} < \ac{acc} < \ac{dat}.
+
+
+
+\section{Summary}
+
+Case competition in headless relatives adheres to the case scale in \ref{ex:case-scale-sum}.
+
+\ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-sum}
+
+If the internal and external case differ, a case more on the right of the scale wins over a case more to the left on the scale.
+
+This case scale is not only found in case competition in headless relatives, but it can also be observed in morphological patterns. First, if the cases are ordered according to the case scale, syncretism only target continuous forms, and no ABA pattern appears. Second, some languages show that the dative formally contains accusative, and that the accusative formally contains the nominative.
+
+These phenomena show that the pattern observed in headless relatives is not something that stands on itself. The scale is a pattern that recurs across languages and across phenomena. Therefore, it should not be treated as a special process with its own stipulated rule. Instead, it should be anchored deeply into the linguistic system, such that the facts presented in this chapter can follow from it.
+
+
+
+
+\section{Aside: In syntax}\label{sec:impl-hier}
+
+This section takes a small detour to discuss two additional phenomena in which the case scale appears. It does not belong to the core of the story, and it can be skipped over without losing track of the reasoning. I discuss two additional syntactic phenomena that reflect the \ac{nom} < \ac{acc} < \ac{dat} scale. The first one is an implicational hierarchy that concerns agreement. The second one is an implicational hierarchy about relativization. I do not provide an analysis that account for the implicational hierarchies in this dissertation.
 
 \subsection{Agreement}
 
@@ -517,7 +603,7 @@ In the languages I discuss in this dissertation, I focus on languages that have 
   \label{fig:agr-nom-acc-dat}
 \end{figure}
 
-In sum, this section has shown that agreement follows the same implicational hierarchy as the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
+In sum, this section has shown that agreement follows the same implicational hierarchy that resembles the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
 
 
 \subsection{Relativization}
@@ -766,90 +852,4 @@ In the languages I discuss in this dissertation, I focus on languages that have 
   \label{fig:rel-nom-acc-dat}
 \end{figure}
 
-In sum, this has shown that relativization follows the same implicational hierarchy as agreement and the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
-
-
-\section{In morphology}\label{sec:case-morphology}
-
-In this chapter so far I showed that the case scale \ac{nom} < \ac{acc} < \ac{dat} can be observed in three syntactic phenomena. It appears in case competition in headless relatives, it forms the basis for the implicational hierarchy observed in agreement across languages, and the same implicational hierarchy holds for relativization strategies crosslinguistically.
-
-In this section, I show that this same case scale can be observed in morphology. First I show that syncretism only targets continuous regions on the case scale. Then I present a language that shows morphological containment that reflects the case scale.
-
-
-\subsection{Syncretism}
-
-Syncretism refers to the phenomenon whereby two or more different functions are fulfilled by a single form \citep[cf.][]{baerman2002}. In this section I discuss literature that shows that syncretism patterns among nominative, accusative and dative are not random. Instead, they pattern along the case scale \ac{nom} < \ac{acc} < \ac{dat}.
-
-It has widely been observed that syncretism is restricted by the linear sequence \ac{nom} --- \ac{acc} --- \ac{dat} \citep{baerman2005,caha2009,zompi2017} (and see \citealt{mcfadden2018,smith2019} for similar claims concerning root suppletion). That is, if one orders cases in this linear sequence, only contiguous regions in the sequence turn out to be syncretic.
-Following that, four possible patterns are attested crosslinguistically. First, all three cases are syncretic. Second, nominative and accusative are syncretic and the dative is not. Third, the accusative and the dative are syncretic and the nominative is not. Fourth, all cases are non-syncretic.
-
-There is one pattern that is not attested crosslinguistically. This pattern does not target continuous regions, but non-contiguous ones: nominative and dative are syncretic and accusative is not. In other words, what does not exist is an ABA pattern, in which a form B intervenes between the two identically formed As \citep{bobaljik2012}.
-
-Table \ref{tbl:syncretisms} shows examples for each of these possible patterns.
-
-\begin{table}[ht]
-  \center
-  \caption {Syncretism patterns in Germanic pronouns}
-    \input{tables/syncretism-nom-acc-dat.tex}
-  \label{tbl:syncretisms}
-\end{table}
-
-Faroese has an example of three distinct forms. The second person singular is \tit{tú} `you' for nominative, \tit{teg} `you' for accusative and \tit{tær} `you' for dative \pgcitep{lockwood1977}{70}.
-Dutch has an example of a complete syncretism for nominative, accusative and dative. The second person plural pronoun is \tit{jullie} `you.\ac{pl}' is syncretic between all three cases.
-Icelandic has an example of a syncretism between accusative and dative but not nominative. The first person singular plural is \tit{okkur} `us' is syncretic between accusative and dative. The nominative has a separate form: \tit{við} `we' \pgcitep{einarsson1949}{68}.
-German has an example of a syncretism between nominative and accusative but not dative. The third person singular feminine \tit{sie} `she/her' is syncretic between nominative and accusative. The dative has a separate form: \tit{ihr} `her'.
-Crucially, to the best of my knowledge, there is no language in which the nominative and the dative are syncretic but the accusative is not.
-
-In sum, case syncretism follows the ordering of the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
-
-
-\subsection{Morphological case containment}
-
-This section shows a second way in which \ac{nom} < \ac{acc} < \ac{dat} is reflected in morphology: morphological case containment \citep[cf.][]{smith2019,zompi2017,caha2010}. In some languages, the form that is used for the accusative literally contains the form that is used for the nominative. In turn, the form for the dative contains the form for the accusative. I illustrate this phenomenon with examples from Khanty.
-
-Khanty (or Ostyak) shows morphological case containment in some of its pronouns (\pgcitealt{nikolaeva1999}{16} after \citealt{smith2019}). Three examples are given in Table \ref{tbl:cont-khanty}.
-
-\begin{table}[ht]
-  \center
-  \caption {Morphological case containment in Khanty}
-  \begin{tabular}{clll}
-  \toprule
-            & \ac{1}\ac{sg}
-            & \ac{3}\ac{sg}
-            & \ac{1}\ac{pl}                           \\
-            \cmidrule(lr){2-2} \cmidrule(lr){3-3} \cmidrule(lr){4-4}
-  \ac{nom}  & ma
-            & luw
-            & muŋ                                     \\
-  \ac{acc}  & ma:\tbf{-ne:m}
-            & luw\tbf{-e:l}
-            & muŋ\tbf{-e:w}                           \\
-  \ac{dat}  & ma:\tbf{-ne:m}\tbf{\tbf{-na}}
-            & luw\tbf{-e:l}\tbf{\tbf{-na}}
-            & muŋ\tbf{-e:w}\tbf{\tbf{-na}}       \\
-  \bottomrule
-  \end{tabular}
-  \label{tbl:cont-khanty}
-\end{table}
-
-The nominative form for the first person singular is \tit{ma} `I'. The form for the accusative is \tit{ma:ne:m} `me'. This is the form for the nominative \tit{ma} plus the accusative marker \tit{-ne:m}. The form for the dative is \tit{ma:ne:mna} `me'. This is the form for the accusative \tit{ma:ne:m} plus the dative marker \tit{-na}. The dative formally contains the accusative, and the accusative formally contains the nominative.
-
-The third person singular and first person plural show the same pattern. The accusative forms \tit{luwe:l} `him/her' and \tit{muŋe:w} `us' contain the nominative forms \tit{luw} and the \tit{muŋ} plus the accusative marker \tit{-e:l} or \tit{-e:w}. The dative forms \tit{luwe:lna} `him/her' and \tit{muŋe:wna} `us' contain the accusative forms \tit{luwe:l} and \tit{muŋe:w} plus the dative marker \tit{-na}. Again, the dative formally contains the accusative, which in turn contains the nominative.
-
-Other languages that show this phenomenon are West Tocharian \citep{gippert1987} and Vlakh and Kalderaš Romani (respectively \citealt{friedman1991} and \citealt{boretzky1994}).
-
-In sum, some languages morphologically look like \ac{nom}-\ac{acc}-\ac{dat}. This reflects the case scale \ac{nom} < \ac{acc} < \ac{dat}.
-
-\section{Summary}
-
-Case competition in headless relatives adheres to the case scale in \ref{ex:case-scale-sum}.
-
-\ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-sum}
-
-If the internal and external case differ, a case more on the right of the scale wins over a case more to the left on the scale.
-
-This case scale is not only found in case competition in headless relatives. Implicational hierarchies regarding two syntactic phenomena appear across languages. The first one concerns agreement. If a language shows agreement with datives, it also shows agreement with accusatives and nominatives. If a language shows agreement with accusatives, it also shows agreement with nominatives.
-The second implicational hierarchy concerns relativization. If a dative in a language can be relativized with a particular strategy, an accusative and a nominative can be too using the same strategy. If an accusative can be relativized with a particular strategy, so can a nominative with this strategy.
-The case scale can also be observed in morphological patterns. First, if the cases are ordered according to the case scale, syncretism only target continuous forms, and no ABA pattern appears. Second, some languages show that the dative formally contains accusative, and that the accusative formally contains the nominative.
-
-These phenomena show that the pattern observed in headless relatives is not something that stands on itself. The scale is a pattern that recurs across languages and across phenomena. Therefore, it should not be treated as a special process with its own stipulated rule. Instead, it should be anchored deeply into the linguistic system, such that the facts presented in this chapter can follow from it.
+In sum, this section and the previous one have shown that the case scale that is observed in headless relatives, in syncretism patterns and in formal containment can also be found in syntax. It appears in the form of implicational hierarchies in agreement and relativization patterns. In this dissertation I do not work out accounts for these two syntactic phenomena. They merely serve as an illustration that the pattern is reflected in other syntactic phenomena as well.
