--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -293,10 +293,8 @@ I show the complete structure that I work towards in this section in \ref{ex:pol
 I discuss two relative pronouns: the animate accusative and the animate dative. These are the two forms that I compare the internal syntax of in Section \ref{sec:comparing-polish}. I show them in \ref{ex:pol-rels}.
 
 \ex.\label{ex:pol-rels}
-\ag. k-o-go\\
- \tsc{rp}.\tsc{an}.\tsc{acc}\\
-\bg. k-o-mu\\
- \tsc{rp}.\tsc{an}.\tsc{dat}\\
+\a. k-o-go `\tsc{rp}.\tsc{an}.\tsc{acc}'
+\b. k-o-mu `\tsc{rp}.\tsc{an}.\tsc{dat}'
 
 I decompose the relative pronouns into three morphemes: \tit{k}, \tit{o} and the suffix (\tit{go} or \tit{mu}). For each morpheme, I discuss which features they spell out, I give their lexical entries, and I show how I construct the relative pronouns by combining the separate morphemes.
 
@@ -327,11 +325,11 @@ I discussed in Chapter \ref{ch:decomposition} that syncretisms can be derived in
 \ex.
 \begin{forest} boom
   [\ac{dat}P
-      [\ac{f}3]
+      [\tsc{k}3]
       [\ac{acc}P
-          [\ac{f}2]
+          [\tsc{k}2]
           [\ac{nom}P
-              [\ac{f}1]
+              [\ac{k}1]
               [2\ac{pl}P
                   [\phantom{xxx}, roof]
               ]
@@ -342,18 +340,18 @@ I discussed in Chapter \ref{ch:decomposition} that syncretisms can be derived in
 \end{forest}
 \label{ex:dutch-jullie-lexicon-rep}
 
-\tit{Jullie} is syncretic between nominative, accusative and dative. It is specified for dative in the lexicon, it is the most complex case of the three. The nominative, the accusative and the dative second person plural in Dutch are spelled out as \tit{jullie}, because the \tsc{dat}P, the \tsc{acc}P and the \tsc{nom}P are all contained in the lexical tree in \ref{ex:dutch-jullie-lexicon-rep} (Superset Principle), and there is no more specific lexical entry available in Dutch (Elsewhere Condition). Importantly, the potentially unused features (so the \tsc{f}3 or \tsc{f}3 and the \tsc{f2}) are at the top, so that the constituent that needs to be spelled out is still contained in the lexical tree.
+\tit{Jullie} is syncretic between nominative, accusative and dative. It is specified for dative in the lexicon, it is the most complex case of the three. The nominative, the accusative and the dative second person plural in Dutch are spelled out as \tit{jullie}, because the \tsc{dat}P, the \tsc{acc}P and the \tsc{nom}P are all contained in the lexical tree in \ref{ex:dutch-jullie-lexicon-rep} (Superset Principle), and there is no more specific lexical entry available in Dutch (Elsewhere Condition). Importantly, the potentially unused features (so the \tsc{k}3 or \tsc{k}3 and the \tsc{k}2) are at the top, so that the constituent that needs to be spelled out is still contained in the lexical tree.
 
 In what follows, I show how I can derive the syncretisms for the forms in Table \ref{tbl:pol-datives}. I propose that \tit{jemu}, \tit{niemu} and \tit{temu} spell out the syntactic structure in \ref{ex:pol-mu-dat-fseq}.
 
 \ex.\label{ex:pol-mu-dat-fseq}
 \begin{forest} boom
   [\tsc{dat}P
-      [\tsc{f}3]
+      [\tsc{k}3]
       [\tsc{acc}P
-          [\tsc{f}2]
+          [\tsc{k}2]
           [\tsc{nom}P
-            [\tsc{f}1]
+            [\tsc{k}1]
             [\tsc{ind}P
                 [\tsc{ind}]
                 [\tsc{an}P
@@ -443,11 +441,11 @@ I give the lexical entry for \tit{mu} in \ref{ex:pol-entry-mu}.
 \ex. \label{ex:pol-entry-mu}
 \begin{forest} boom
   [\tsc{dat}P
-      [\tsc{f}3]
+      [\tsc{k}3]
       [\tsc{acc}P
-          [\tsc{f}2]
+          [\tsc{k}2]
           [\tsc{nom}P
-              [\tsc{f}1]
+              [\tsc{k}1]
               [\tsc{ind}P
                   [\tsc{ind}]
               ]
@@ -459,14 +457,14 @@ I give the lexical entry for \tit{mu} in \ref{ex:pol-entry-mu}.
 
 Notice here that \tit{mu} has a unary bottom, just as the morpheme \tit{e:l} in Khanty (see Chapter \ref{ch:decomposition} and Chapter \ref{ch:the-basic-idea}). Therefore, it can be inserted as the result of movement. It also means that the inserted phonology form follows the already present phonology and is spelled out as a suffix. This is how the correct order of \tit{je/nie/te} and \tit{mu} comes about. I illustrate the movement operation and how it is a step of the Spellout Algorithm later on in this section.
 
-The morpheme \tit{go} is identical to the morpheme \tit{mu}, except for that it expresses accusative case instead of dative case. Therefore, the morpheme \tit{go} differs from \tit{mu} in that it lacks the feature \tsc{f}3 in its lexical entry, as shown in \ref{ex:pol-entry-go}.
+The morpheme \tit{go} is identical to the morpheme \tit{mu}, except for that it expresses accusative case instead of dative case. Therefore, the morpheme \tit{go} differs from \tit{mu} in that it lacks the feature \tsc{k}3 in its lexical entry, as shown in \ref{ex:pol-entry-go}.
 
 \ex. \label{ex:pol-entry-go}
 \begin{forest} boom
   [\tsc{acc}P
-      [\tsc{f}2]
+      [\tsc{k}2]
       [\tsc{nom}P
-          [\tsc{f}1]
+          [\tsc{k}1]
           [\tsc{ind}P
               [\tsc{ind}]
           ]
@@ -604,7 +602,7 @@ Consider the paradigm for the singular of \tit{lampa} `light' and the singular o
 The stem and the suffixes are identical in both paradigms, except for in the dative.\footnote{
 There is also the change from /i/ to /y/ in the genitive of \tit{lampa}.
 }
-There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \tit{c}. Also, part of the suffix, namely the \tit{i} has disappeared. Analyzing \tit{córc-e} as \tit{córk-i-e} brings back regularity in the paradigm.
+There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \tit{c}. Also, part of the suffix, the \tit{i}, has disappeared. Analyzing \tit{córc-e} as \tit{córk-i-e} brings back regularity in the paradigm.
 
 Consider the forms after this first phonological change and the surface forms in Table \ref{tbl:pol-rps-change1-real}.
 
@@ -798,9 +796,9 @@ In what follows, I show how the Polish relative pronouns are constructed. I foll
 \b. \label{ex:pol-entry-go-rep-rp}
 \begin{forest} boom
   [\tsc{acc}P
-      [\tsc{f}2]
+      [\tsc{k}2]
       [\tsc{nom}P
-          [\tsc{f}1]
+          [\tsc{k}1]
           [\tsc{ind}P
               [\tsc{ind}]
           ]
@@ -811,11 +809,11 @@ In what follows, I show how the Polish relative pronouns are constructed. I foll
 \b. \label{ex:pol-entry-mu-rep-rp}
 \begin{forest} boom
   [\tsc{dat}P
-      [\tsc{f}3]
+      [\tsc{k}3]
       [\tsc{acc}P
-          [\tsc{f}2]
+          [\tsc{k}2]
           [\tsc{nom}P
-              [\tsc{f}1]
+              [\tsc{k}1]
               [\tsc{ind}P
                   [\tsc{ind}]
               ]
@@ -869,7 +867,7 @@ Therefore, the \tsc{an}P is spelled out as \tit{o}, shown in \ref{ex:pol-spellou
 The next feature in the functional sequence is the feature \tsc{ind}. It is merged, and an \tsc{ind}P is created. This syntactic structure does not form a constituent in the lexical tree in \ref{ex:pol-entry-o-rep-rp}. There is no other lexical tree that contains the syntactic structure as a constituent.
 Therefore, there is no successfull spellout for the syntactic structure in the derivational step in which the structure is spelled out as a single phrase (\ref{ex:spellout-algorithm-phrasal-rep} in the Spellout Algorithm, repeated from Chapter \ref{ch:deriving-onlyinternal}).
 
-\ex. \tbf{Spellout Algorithm} (as in \citealt{caha2020a}, based on \citealt{starke2018})\label{ex:spellout-algorithm-rep}
+\ex. \tbf{Spellout Algorithm} (as in \citealt{caha2021}, based on \citealt{starke2018})\label{ex:spellout-algorithm-rep}
  \a. Merge F and spell out.\label{ex:spellout-algorithm-phrasal-rep}
  \b. If (a) fails, move the Spec of the complement and spell out.\label{ex:spellout-algorithm-spec-rep}
  \b. If (b) fails, move the complement of F and spell out.\label{ex:spellout-algorithm-comp-rep}
@@ -988,24 +986,24 @@ The feature is merged with the existing syntactic structure, creating a \tsc{rel
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
 Backtracking leads to splitting up the \tsc{wh}P from the \tsc{ind}P.
 The feature \tsc{rel} is merged in both workspaces, so with \tsc{wh}P and and with \tsc{ind}P. The spellout of \tsc{rel} is successful when it is combined with the \tsc{wh}P.
-It namely forms a constituent in the lexical tree in \ref{ex:pol-entry-k-rep-rp}, which corresponds to the \tit{k}.
+It forms a constituent in the lexical tree in \ref{ex:pol-entry-k-rep-rp}, which corresponds to the \tit{k}.
 The \tsc{rel}P is spelled out as \tit{k}, and it is merged back to the existing syntactic structure.
 
-The next feature on the functional sequence is \tsc{f}1. This feature should somehow end up merging with \tsc{ind}P, because it forms a constituent in the lexical tree in \ref{ex:pol-entry-go-rep-rp}, which corresponds to the \tit{go}.
+The next feature on the functional sequence is \tsc{k}1. This feature should somehow end up merging with \tsc{ind}P, because it forms a constituent in the lexical tree in \ref{ex:pol-entry-go-rep-rp}, which corresponds to the \tit{go}.
 This is achieved via Backtracking in which phrases are split up and going through the Spellout Algorithm. I go through the derivation step by step.
-The feature \tsc{f}1 is merged with the existing syntactic structure, creating a \tsc{nom}P.
+The feature \tsc{k}1 is merged with the existing syntactic structure, creating a \tsc{nom}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
 Backtracking leads to splitting up the \tsc{rel}P from the \tsc{ind}P.
-The feature \tsc{f}1 is merged in both workspaces, so with the \tsc{rel}P and and with the \tsc{ind}P. None of these phrases form a constituent in any of the lexical trees in the language's lexicon.
+The feature \tsc{k}1 is merged in both workspaces, so with the \tsc{rel}P and and with the \tsc{ind}P. None of these phrases form a constituent in any of the lexical trees in the language's lexicon.
 The first movement option in the Spellout Algorithm is moving the specifier. In the \tsc{rel}P there is no specifier, so this movement option is irrelevant. In the \tsc{ind}P, however, there is a specifier, which is moved to the specifier of \tsc{nom}P.
 This syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-go-rep-rp}, which corresponds to the \tit{go}.
 The \tsc{nom}P is spelled out as \tit{go}, and the \tsc{nom}P is merged back to the existing syntactic structure.
 
-For the accusative relative pronoun, the last feature on the functional sequence is the feature \tsc{f}2. Its derivation proceeds the same as the one for the feature \tsc{f}1.
-The feature \tsc{f}2 is merged with the existing syntactic structure, creating a \tsc{acc}P.
+For the accusative relative pronoun, the last feature on the functional sequence is the feature \tsc{k}2. Its derivation proceeds the same as the one for the feature \tsc{k}1.
+The feature \tsc{k}2 is merged with the existing syntactic structure, creating a \tsc{acc}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
 Backtracking leads to splitting up the \tsc{rel}P from the \tsc{nom}P.
-The feature \tsc{f}2 is merged in both workspaces, so with the \tsc{rel}P and and with the \tsc{nom}P. None of these phrases form a constituent in any of the lexical trees in the language's lexicon.
+The feature \tsc{k}2 is merged in both workspaces, so with the \tsc{rel}P and and with the \tsc{nom}P. None of these phrases form a constituent in any of the lexical trees in the language's lexicon.
 The first movement option in the Spellout Algorithm is moving the specifier. In the \tsc{rel}P there is no specifier, so this movement option is irrelevant. In the \tsc{nom}P, however, there is a specifier, which is moved to the specifier of \tsc{acc}P.
 This syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-go-rep-rp}, which corresponds to the \tit{go}.
 The \tsc{acc}P is spelled out as \tit{go}, and the \tsc{acc}P is merged back to the existing syntactic structure, as shown in \ref{ex:pol-spellout-rel-acc}.
@@ -1054,9 +1052,9 @@ The \tsc{acc}P is spelled out as \tit{go}, and the \tsc{acc}P is merged back to 
           scale=0.95,
           fit to=tree]{};
           }
-              [\tsc{f}2]
+              [\tsc{k}2]
               [\tsc{nom}P
-                  [\tsc{f}1]
+                  [\tsc{k}1]
                   [\tsc{ind}P
                       [\tsc{ind}]
                   ]
@@ -1067,11 +1065,11 @@ The \tsc{acc}P is spelled out as \tit{go}, and the \tsc{acc}P is merged back to 
 \end{forest}
 \end{adjustbox}
 
-For the dative relative pronoun, the last feature on the functional sequence is the feature \tsc{f}3. Its derivation proceeds the same as the one for the feature \tsc{f}2.
-The feature \tsc{f}3 is merged with the existing syntactic structure, creating a \tsc{dat}P.
+For the dative relative pronoun, the last feature on the functional sequence is the feature \tsc{k}3. Its derivation proceeds the same as the one for the feature \tsc{k}2.
+The feature \tsc{k}3 is merged with the existing syntactic structure, creating a \tsc{dat}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
 Backtracking leads to splitting up the \tsc{rel}P from the \tsc{acc}P.
-The feature \tsc{f}3 is merged in both workspaces, so with the \tsc{rel}P and and with the \tsc{acc}P. None of these phrases form a constituent in any of the lexical trees in the language's lexicon.
+The feature \tsc{k}3 is merged in both workspaces, so with the \tsc{rel}P and and with the \tsc{acc}P. None of these phrases form a constituent in any of the lexical trees in the language's lexicon.
 The first movement option in the Spellout Algorithm is moving the specifier. In the \tsc{rel}P there is no specifier, so this movement option is irrelevant. In the \tsc{acc}P, however, there is a specifier, which is moved to the specifier of \tsc{dat}P.
 This syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-mu-rep-rp}, which corresponds to the \tit{mu}.
 The \tsc{dat}P is spelled out as \tit{mu}, and the \tsc{dat}P is merged back to the existing syntactic structure, as shown in \ref{ex:pol-spellout-rel-dat}.
@@ -1120,11 +1118,11 @@ The \tsc{dat}P is spelled out as \tit{mu}, and the \tsc{dat}P is merged back to 
           scale=0.95,
           fit to=tree]{};
           }
-              [\tsc{f}3]
+              [\tsc{k}3]
               [\tsc{acc}P
-                  [\tsc{f}2]
+                  [\tsc{k}2]
                   [\tsc{nom}P
-                      [\tsc{f}1]
+                      [\tsc{k}1]
                       [\tsc{ind}P
                           [\tsc{ind}]
                       ]
@@ -1165,7 +1163,7 @@ I have suggested that headless relatives are derived from light-headed relatives
   ]
 \end{forest}
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that languages have two possible light heads. Headless relatives in Modern German can only be derived from light-headed relatives that are headed by the light head that consists of the two features ϕ and \tsc{k}.
+In Chapter \ref{ch:the-basic-idea}, I suggested that languages have two possible light heads. Headless relatives in Modern German can only be derived from light-headed relatives that are headed by one of these heads, namely the one in which the light head consists of the two features ϕ and \tsc{k}.
 In this section, I determine the exact feature content of the light head.
 As I suggested in Chapter \ref{ch:deriving-onlyinternal} for Modern German, I end up claiming that the phi and case features morpheme of the relative pronoun is the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:pol-elh}.
 
@@ -1258,10 +1256,8 @@ In the remainder of this section, I discuss the two extra light heads that I com
 % }
 
 \ex.\label{ex:pol-elhs}
-\ag. o-go\\
- \tsc{elh}.\tsc{an}.\tsc{acc}\\
-\bg. o-mu\\
- \tsc{elh}.\tsc{an}.\tsc{dat}\\
+\a. o-go `\tsc{elh}.\tsc{an}.\tsc{acc}'
+\b. o-mu `\tsc{elh}.\tsc{an}.\tsc{dat}'
 
 As I noted before, these forms do not surface as light heads in a light-headed relative. They do also not surface anywhere else in the language.
 
@@ -1303,9 +1299,9 @@ I introduced the lexical entries that are required to spell out these features i
 \b. \label{ex:pol-entry-go-rep-lh}
 \begin{forest} boom
   [\tsc{acc}P
-      [\tsc{f}2]
+      [\tsc{k}2]
       [\tsc{nom}P
-          [\tsc{f}1]
+          [\tsc{k}1]
           [\tsc{ind}P
               [\tsc{ind}]
           ]
@@ -1316,11 +1312,11 @@ I introduced the lexical entries that are required to spell out these features i
 \b. \label{ex:pol-entry-mu-rep-lh}
 \begin{forest} boom
   [\tsc{dat}P
-      [\tsc{f}3]
+      [\tsc{k}3]
       [\tsc{acc}P
-          [\tsc{f}2]
+          [\tsc{k}2]
           [\tsc{nom}P
-              [\tsc{f}1]
+              [\tsc{k}1]
               [\tsc{ind}P
                   [\tsc{ind}]
               ]
@@ -1360,7 +1356,7 @@ In what follows, I construct the Polish extra light heads. Until the feature \ts
   ]
 \end{forest}
 
-Then, the feature \tsc{f}1 is merged. The feature \tsc{f}1 is merged with the \tsc{ind}P, forming an \tsc{nom}P. This phrase is not contained in any of the Polish lexical entries. The first movement is tried, and the specifier of the \tsc{ind}P, the \tsc{an}P, is moved to the specifier of \tsc{nom}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep-lh}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-nom}.
+Then, the feature \tsc{k}1 is merged. The feature \tsc{k}1 is merged with the \tsc{ind}P, forming an \tsc{nom}P. This phrase is not contained in any of the Polish lexical entries. The first movement is tried, and the specifier of the \tsc{ind}P, the \tsc{an}P, is moved to the specifier of \tsc{nom}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep-lh}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-nom}.
 
 \ex.\label{ex:pol-elh-nom}
 \begin{adjustbox}{max width=0.9\textwidth}
@@ -1386,7 +1382,7 @@ Then, the feature \tsc{f}1 is merged. The feature \tsc{f}1 is merged with the \t
       scale=0.9,
       fit to=tree]{};
       }
-          [\tsc{f}1]
+          [\tsc{k}1]
           [\tsc{ind}P
               [\tsc{ind}]
           ]
@@ -1395,7 +1391,7 @@ Then, the feature \tsc{f}1 is merged. The feature \tsc{f}1 is merged with the \t
 \end{forest}
 \end{adjustbox}
 
-For the accusative extra light head, the last feature is merged: the \tsc{f}2.
+For the accusative extra light head, the last feature is merged: the \tsc{k}2.
 The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is not contained in any of the lexical entries. The first movement is tried, and the specifier of the \tsc{nom}P, the \tsc{an}P, is moved to the specifier of \tsc{acc}P. This phrase is contained in the lexical tree in \ref{ex:pol-entry-go-rep-lh}, so it is spelled out as \tit{go}, as shown in \ref{ex:pol-elh-acc}.
 
 \ex.\label{ex:pol-elh-acc}
@@ -1422,9 +1418,9 @@ The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is
       scale=0.9,
       fit to=tree]{};
       }
-          [\tsc{f}2]
+          [\tsc{k}2]
           [\tsc{nom}P
-              [\tsc{f}1]
+              [\tsc{k}1]
               [\tsc{ind}P
                   [\tsc{ind}]
               ]
@@ -1434,7 +1430,7 @@ The feature is merged with the \tsc{nom}P, forming an \tsc{acc}P. This phrase is
 \end{forest}
 \end{adjustbox}
 
-For the dative relative pronoun, one more feature is merged: the \tsc{f}3.
+For the dative relative pronoun, one more feature is merged: the \tsc{k}3.
 The feature  is merged with the \tsc{acc}P, forming an \tsc{dat}P. This phrase is not contained in any of the lexical entries. The first movement is tried, and the specifier of the \tsc{acc}P, the \tsc{an}P, is moved to the specifier of \tsc{dat}P.
 This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu-rep-lh}, so it is spelled out as \tit{mu}, as shown in \ref{ex:pol-elh-dat}.
 
@@ -1462,11 +1458,11 @@ This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu-rep-lh}, so
       scale=0.95,
       fit to=tree]{};
       }
-          [\tsc{f}3]
+          [\tsc{k}3]
           [\tsc{acc}P
-              [\tsc{f}2]
+              [\tsc{k}2]
               [\tsc{nom}P
-                  [\tsc{f}1]
+                  [\tsc{k}1]
                   [\tsc{ind}P
                       [\tsc{ind}]
                   ]
@@ -1531,9 +1527,9 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
               scale=0.9,
               fit to=tree]{};
               }
-                  [\tsc{f}2]
+                  [\tsc{k}2]
                   [\tsc{nom}P
-                      [\tsc{f}1]
+                      [\tsc{k}1]
                       [\tsc{ind}P
                           [\tsc{ind}]
                       ]
@@ -1571,9 +1567,9 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
                 scale=0.9,
                 fit to=tree]{};
                 }
-                    [\tsc{f}2]
+                    [\tsc{k}2]
                     [\tsc{nom}P
-                        [\tsc{f}1]
+                        [\tsc{k}1]
                         [\tsc{ind}P
                             [\tsc{ind}]
                         ]
@@ -1598,7 +1594,7 @@ I draw a dashed circle around the biggest possible element that is structurally 
 
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
 This (higher) \tsc{acc}P is structurally contained in the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
-The surface pronoun is the relative pronoun that bears the internal case: \tit{kogo}.
+The surface element is the relative pronoun that bears the internal case: \tit{kogo}.
 
 I continue with the example in which the internal case is more complex than the external case.
 Consider the examples in \ref{ex:polish-acc-dat-rep}, in which the internal dative case competes against the external accusative case. The relative clauses are marked in bold. It is not possible to make a grammatical headless relative in this situation.
@@ -1648,9 +1644,9 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
               dashed,
               fit to=tree]{};
               }
-                  [\tsc{f}2]
+                  [\tsc{k}2]
                   [\tsc{nom}P
-                      [\tsc{f}1]
+                      [\tsc{k}1]
                       [\tsc{ind}P
                           [\tsc{ind}]
                       ]
@@ -1687,7 +1683,7 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
                 scale=0.95,
                 fit to=tree]{};
                 }
-                    [\tsc{f}3]
+                    [\tsc{k}3]
                     [\tsc{acc}P, tikz={
                     \node[
                     draw,circle,
@@ -1695,9 +1691,9 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
                     dashed,
                     fit to=tree]{};
                     }
-                        [\tsc{f}2]
+                        [\tsc{k}2]
                         [\tsc{nom}P
-                            [\tsc{f}1]
+                            [\tsc{k}1]
                             [\tsc{ind}P
                                 [\tsc{ind}]
                             ]
@@ -1722,7 +1718,7 @@ I draw a dashed circle around the biggest possible element that is structurally 
 
 In this case, the light head is not a constituent that is structurally contained in the relative pronoun.
 The extra light head consists of two constituents: the \tsc{an}P and the (lower) \tsc{acc}P. Together they form the (higher) \tsc{acc}P.
-Both of these constituents are also constituents that are structurally contained in the relative pronoun. However, the (higher) \tsc{acc}P is not a constituent that is structurally contained in the relative pronoun. The constituent in which the \tsc{acc}P is contained namely also contains the feature \tsc{f}3 that makes it a \tsc{dat}P.
+Both of these constituents are also constituents that are structurally contained in the relative pronoun. However, the (higher) \tsc{acc}P is not a constituent that is structurally contained in the relative pronoun. The constituent in which the \tsc{acc}P is contained also contains the feature \tsc{k}3 that makes it a \tsc{dat}P.
 In other words, each feature and even each subconstituent of the extra light head is contained in the relative pronoun. However, they do not form a single constituent that is structurally contained in the relative pronoun. Therefore, the extra light head cannot be deleted.
 
 Recall from Section \ref{sec:comparing-mg} that this is the crucial example in which Modern German and Polish differ. The contrast lies in that the extra light head in Modern German corresponds to a single lexical entry and in Polish it corresponds to two lexical entries.
@@ -1730,7 +1726,7 @@ In Modern German, extra light heads in a less complex case form a constituent th
 In Polish, they do not.
 Relative pronouns in a complex case still contain all features of the extra light head in a less complex case, but the extra light head does not form a single constituent that is structurally contained in the relative pronoun. That is, the weaker feature containment requirement is met, but the stronger constituent containment requirement is not. This shows the necessity of formulating the proposal in terms of containment as a single constituent.
 
-The relative pronoun is not a constituent that is structurally or formally contained in the light head. It namely lacks the complete constituent and \tsc{rel}P.
+The relative pronoun is not a constituent that is structurally or formally contained in the light head. It lacks the complete constituent and \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, there is no grammatical headless relative possible.
 
@@ -1777,7 +1773,7 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
               scale=0.95,
               fit to=tree]{};
               }
-                  [\tsc{f}3]
+                  [\tsc{k}3]
                   [\tsc{acc}P,
                   tikz={
                   \node[
@@ -1786,9 +1782,9 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
                   dashed,
                   fit to=tree]{};
                   }
-                      [\tsc{f}2]
+                      [\tsc{k}2]
                       [\tsc{nom}P
-                          [\tsc{f}1]
+                          [\tsc{k}1]
                           [\tsc{ind}P
                               [\tsc{ind}]
                           ]
@@ -1831,9 +1827,9 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
                 dashed,
                 fit to=tree]{};
                 }
-                    [\tsc{f}2]
+                    [\tsc{k}2]
                     [\tsc{nom}P
-                        [\tsc{f}1]
+                        [\tsc{k}1]
                         [\tsc{ind}P
                             [\tsc{ind}]
                         ]
@@ -1857,9 +1853,9 @@ I draw a dashed circle around the biggest possible element that is structurally 
 
 In this case, the light head is not a constituent that is structurally contained in the relative pronoun.
 The light head consists of two morphemes: \tit{o} and \tit{mu}.
-The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 that makes a \tsc{dat}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either.
+The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{k}3 that makes a \tsc{dat}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either.
 
-The relative pronoun is not a constituent that is structurally contained in the light head. It namely lacks the complete constituent \tsc{rel}P.
+The relative pronoun is not a constituent that is structurally contained in the light head. It lacks the complete constituent \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, there is no grammatical headless relative possible.
 
@@ -1944,5 +1940,5 @@ When the internal and external case differ, neither the light head nor the relat
 
 In other words, the crucial difference between Modern German and Polish that leads them to be of different language types is that I analyze Modern German extra light heads as monomorphemic (e.g. \tit{n}) and Polish extra light heads as bimorphemic (e.g. \tit{o-go}).
 This raises the question of whether Polish extra light heads could not be monomorphemic too. A possible hypothesis would be that the morpheme \tit{go} is the extra light head and not \tit{o-go}.
-A parallel between the Polish \tit{go} (and \tit{mu}) and the Modern German \tit{n} (and \tit{m}) would be that they both surface as pronouns in their respective languages. However, there is a difference between the Polish \tit{go} and Modern German \tit{n}. The Polish \tit{go} is analyzed as a clitic \cite{swan2002}, whereas the Modern German \tit{n} is analyzed as a weak pronoun (see footnote \ref{ftn:mg-weak-pronoun}).
+A parallel between the Polish \tit{go} (and \tit{mu}) and the Modern German \tit{n} (and \tit{m}) would be that they both surface as pronouns in their respective languages. However, there is a difference between the Polish \tit{go} and Modern German \tit{n}. The Polish \tit{go} is analyzed as a clitic \cite{swan2002}, whereas the Modern German \tit{n} is analyzed as a weak pronoun (see footnote \ref{sec:mg-weak-pronoun}).
 I assume that the weak pronoun in Polish is \tit{o-go} (which combines with the \tit{i} I introduced in Section \ref{sec:pol-rel} to become a strong pronoun). A question that remains unanswered is why \tit{o-go} does not surface as a weak pronoun.
